# simworld

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  nightly.yml
configs/: config.yaml
configs/abm/: default.yaml
configs/behavior/: bounded_rational.yaml  logit_baseline.yaml  logit_sticky.yaml
configs/calibration/: numpyro_bsl.yaml  numpyro_nuts.yaml  pymc_nuts.yaml  smc_abc.yaml
configs/causal/: default.yaml
configs/compute/: local.yaml  ray_cluster.yaml  ray_local.yaml  slurm.yaml
configs/data/: real.yaml  synthetic.yaml
configs/dgp/: confounded.yaml  misspecified.yaml  wellspecified.yaml
configs/emulator/: gru_baseline.yaml  rssm_flat.yaml  rssm_gnn.yaml
configs/ensemble/: grid_full.yaml  grid_small.yaml
configs/env/: multi_agent.yaml  single_agent.yaml
configs/eval/: fast.yaml  full.yaml
configs/hydra/launcher/: basic.yaml  joblib.yaml  submitit_slurm.yaml
configs/network/: empirical.yaml  scalefree.yaml  smallworld.yaml
configs/objective/: balanced.yaml  competition_first.yaml  compliance_first.yaml
configs/policy/: bo_optimal.yaml  none.yaml  phased_targeted.yaml  rl_dreamer.yaml  rl_ppo.yaml  targeted.yaml  uniform_high.yaml  uniform_low.yaml
configs/population/: base.yaml  large.yaml  small.yaml
configs/profile/: dev.yaml  full.yaml  smoke.yaml
configs/rl/: rllib_marl.yaml  sb3_ppo.yaml  sb3_sac.yaml  torchrl_dreamer.yaml
configs/sensitivity/: morris.yaml  sobol.yaml
configs/tracking/: mlflow.yaml  none.yaml  wandb.yaml
docker/: Dockerfile  Dockerfile.cuda  compose.yaml
docs/: DEVIATIONS.md  MINIMAL_PATH.md  REAL_DATA.md  REVIEW_HANDOFF.md
reports/: FINDINGS.md
scripts/: build_graphs.py  build_report.py  calibrate.py  causal_analysis.py  dashboard.py  eval_emulator.py  generate_world.py  make_data.py  make_emulator_dataset.py  make_figures.py  recovery_grid.py  run_abm.py  run_ensemble.py  run_pipeline.py  sensitivity.py  train_emulator.py  train_marl.py  train_rl.py  validate_simulator.py
slurm/: submit.sbatch
src/regworld/: pipeline.py  rules.py  seeding.py  stages.py  tracking.py  types.py
src/regworld/abm/: __init__.py  agents.py  collect.py  model.py  policies.py  tensorized.py
src/simworld/: logging_conf.py  pipeline.py  rules.py  stages.py  tracking.py  types.py
tests/: conftest.py  test_abm_agreement.py  test_abm_contract.py  test_agents_contract.py  test_causal_recovers_known_effect.py  test_config.py  test_data_schema.py  test_dgp_integrity.py  test_driver.py  test_dynamics_shapes.py  test_ensemble_contract.py  test_env_contract.py  test_graph_construction.py  test_layering.py  test_marl_env.py  test_marl_policy.py  test_no_dgp_leakage.py  test_parameter_recovery.py  test_policy.py  test_report_contract.py  test_rules.py  test_seeds.py  test_sensitivity_contract.py  test_smoke_train.py  test_tracker.py  test_visualization_contract.py
(+145 files in other folders)
