[project]
name = "regworld"
version = "0.1.0"
description = "A policy world model of regulatory propagation through firms, consumers, and institutions."
requires-python = ">=3.11,<3.13"
dependencies = [
  # core — must always solve
  "numpy>=1.26,<3", "scipy>=1.13", "pandas>=2.2", "polars>=1.0", "pyarrow>=16", "duckdb>=1.0",
  "networkx>=3.3", "mesa>=3.0",                         # 3.x for the AgentSet API
  "torch>=2.4", "torch-geometric>=2.6", "einops>=0.8",  # PyG >=2.6: no compiled scatter/sparse extras
  "gymnasium>=1.0",                                     # 5-tuple step, terminated/truncated
  "xarray>=2024.6", "zarr>=2.18,<3", "h5netcdf>=1.3",
  "scikit-learn>=1.5", "statsmodels>=0.14",
  "hydra-core>=1.3", "omegaconf>=2.3", "pydantic>=2.7",
  "mlflow>=2.14",
  "matplotlib>=3.8", "plotly>=5.22",
  "tqdm>=4.66", "rich>=13.7",
]

[project.optional-dependencies]
bayes  = ["numpyro>=0.15", "jax[cpu]>=0.4.30", "pymc>=5.16",
          "arviz>=0.18,<1"]  # arviz 1.x removed the API pymc's idata integration needs
causal = ["dowhy>=0.12",     # dowhy 0.11 imports numpy.distutils, gone in numpy 2.x
          "econml>=0.15", "linearmodels>=6.0", "causal-learn>=0.1.3",
          "numba>=0.60"]  # floor: stops the resolver backtracking to numba 0.53/llvmlite 0.36 (unbuildable on py3.12)
rl     = ["stable-baselines3>=2.3", "pettingzoo>=1.24", "supersuit>=3.9",
          "ray[default,rllib,tune]>=2.30", "torchrl>=0.4", "tensordict>=0.4"]
opt    = ["SALib>=1.5", "optuna>=3.6", "botorch>=0.11", "ax-platform>=0.4"]
app    = ["streamlit>=1.35"]
dev    = ["pytest>=8.2", "pytest-cov>=5.0", "pytest-xdist>=3.6", "hypothesis>=6.100",
          "ruff>=0.5", "mypy>=1.10", "pre-commit>=3.7", "types-PyYAML"]
gpu    = []                                             # install CUDA torch via index-url in Docker.cuda
tensor = ["agent-torch>=0.4"]                           # Stage 3b; pure-torch fallback if it won't install
slurm  = ["hydra-submitit-launcher>=1.2"]
dvc    = ["dvc>=3.51"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regworld"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF", "T20"]   # T20 bans print()
[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["T20", "E402"]
"scripts/*"   = ["T20"]

[tool.mypy]
python_version = "3.11"
packages = ["regworld"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
# strict where a wrong tensor shape can masquerade as a subtle result:
[[tool.mypy.overrides]]
module = ["regworld.models.*", "regworld.environments.*"]
disallow_any_generics = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["slow: long-running scientific gates"]
filterwarnings = ["ignore::DeprecationWarning"]
